src/objects/NyukinChoseiM__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NyukinChoseiM_Account</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <inlineHelpText>入金データの備考に初期値として記載される。</inlineHelpText>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kingaku__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>変動しない固定の金額を売掛データから差し引く金額。</inlineHelpText>
        <label>固定金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PasentoBubiki__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>売掛金額に対して割合で歩引を行う場合のパーセント。 
空白「0」は歩引なし。</inlineHelpText>
        <label>パーセント歩引</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShokiKakutei__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>売掛データ作成時点で入金確認日を設定する場合ON。</inlineHelpText>
        <label>初期確定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TorihikiKubun__c</fullName>
        <inlineHelpText>入金データの備考の先頭に初期値として記載される。</inlineHelpText>
        <label>調整区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>入金</fullName>
                </value>
                <value>
                    <fullName>歩引</fullName>
                </value>
                <value>
                    <fullName>値引</fullName>
                </value>
                <value>
                    <fullName>振込手数料</fullName>
                </value>
                <value>
                    <fullName>その他手数料</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Torihikisakimei__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取引先名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YukoKigen__c</fullName>
        <inlineHelpText>特定の期限までで有効化させる場合の日付。 
空白は期限なし（無期限）で有効化。</inlineHelpText>
        <label>有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YukokaShikiichi__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>一定のしきい値以上で有効化させる場合の金額。 
空白「0」は閾値なしで無条件有効化。</inlineHelpText>
        <label>有効化閾値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>請求調整マスタ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Biko__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>Kingaku__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukoKigen__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20151021a</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>Kingaku__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PasentoBubiki__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukokaShikiichi__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>．サンプル割引系（無条件）</label>
    </listViews>
    <listViews>
        <fullName>View20151021b</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>Kingaku__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PasentoBubiki__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukokaShikiichi__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>．サンプル割引系（条件有）</label>
    </listViews>
    <listViews>
        <fullName>View20151021c</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>Kingaku__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Kingaku__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukokaShikiichi__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>．サンプル値引系（無条件）</label>
    </listViews>
    <listViews>
        <fullName>View20151021d</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>Kingaku__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Kingaku__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukokaShikiichi__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>．サンプル値引系（条件有）</label>
    </listViews>
    <listViews>
        <fullName>View20151021e</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>Kingaku__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PasentoBubiki__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukoKigen__c</field>
            <operation>equals</operation>
        </filters>
        <label>．サンプル割引系（無期限）</label>
    </listViews>
    <listViews>
        <fullName>View20151021f</fullName>
        <columns>NAME</columns>
        <columns>Torihikisakimei__c</columns>
        <columns>TorihikiKubun__c</columns>
        <columns>PasentoBubiki__c</columns>
        <columns>ShokiKakutei__c</columns>
        <columns>YukokaShikiichi__c</columns>
        <columns>YukoKigen__c</columns>
        <columns>Kingaku__c</columns>
        <columns>Biko__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PasentoBubiki__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>YukoKigen__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>．サンプル割引系（期限有）</label>
    </listViews>
    <nameField>
        <displayFormat>請求調整-{0000000000}</displayFormat>
        <label>請求調整番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>